Tela de usuário finalizada e services adicionados

--- a/pilacoin-wallet/src/components/cryptocurrency.scss
+++ b/pilacoin-wallet/src/components/cryptocurrency.scss
@@ -1,7 +1,9 @@
+@import "@/assets/styles/media-queries.scss";
+
 .crypto-item {
-  .icon-[solar--chat-round-money-bold] {
-    color: var(--gold);
-    
+  .coin-icon {
+    @media (min-width: $xl2) {
+      font-size: 40px;
+    }
   }
 }
-
