--- a/pilacoin-wallet/src/app/trade/trade.scss
+++ b/pilacoin-wallet/src/app/trade/trade.scss
@@ -6,4 +6,11 @@
       max-width: 1200px;
     }
   }
+
+  .nonce {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 1rem;
+    overflow: hidden;
+  }
 }
