Ajuste na tela de transferência

--- a/pilacoin-wallet/src/assets/styles/colors.scss
+++ b/pilacoin-wallet/src/assets/styles/colors.scss
@@ -6,6 +6,10 @@ $black-primary: #111;
     color: $gold-color;
   }
 
+  .black-primary {
+    color: $black-primary;
+  }
+
   .background-gold {
     background-color: $gold-color;
   }
