--- a/pilacoin-wallet/src/components/miner.scss
+++ b/pilacoin-wallet/src/components/miner.scss
@@ -1,7 +1,7 @@
 @import "@/assets/styles/media-queries.scss";
 
 .miner-messages {
-  height: 96px;
+  min-height: 96px;
   max-height: 192px;
   cursor: pointer;
 
@@ -71,8 +71,8 @@
   }
 
   @media (min-width: $lg) {
-    height: 100%;
+    min-height: 200px;
     max-height: 400px;
-    line-height: 1.5rem;
+    line-height: 2rem;
   }
 }
